# embedded-linux

1-python/Lec01_introduction/: task01.py  task02.py  task04.py
1-python/Lec02_containers/: lab01.py
1-python/Lec02_containers/task03/: task03.py
1-python/Lec03_advanced/quick_task01/: quick_task01.py
1-python/Lec03_advanced/quick_task02/: quick_task02.py
1-python/Lec03_advanced/quick_task03/: demo.txt  quick_task03.py
1-python/Lec03_advanced/task01/: task01.py
1-python/Lec03_advanced/task02/: task02.py
1-python/Lec03_advanced/task04/: task04.py
1-python/Lec03_advanced/task06/: headers.h
1-python/Lec04_GUI/: quick_task01.py  quick_task02.py  quick_task03.py  task01.py  task02.py  task03.py
1-python/Lec04_GUI/task04/: client.py  server.py
2-C++/Lec01_Introduction/task01/: task01.cpp
2-C++/Lec03_OOP/task01/: out  (+1 more)
2-C++/conrol_PC_with_mobile/: README.md  cli  client.cpp  out  ser  server.cpp
3-Linux/Lec2_InitProcess/shared_lib/lib/: CMakeLists.txt
3-Linux/Lec2_InitProcess/shared_lib/lib/src/: Circle.cpp  Rectangle.cpp
Lec01_introduction/: task03.py  task05.py
Lec02_containers/: quick_task01.py  quick_task02.py
Lec02_containers/task01/: firelink.py  task01.py
Lec02_containers/task02/: task02.py
Lec02_containers/task04/: task04.py
Lec03_advanced/: lab01_threading.py  lab02_threading.py
Lec03_advanced/quick_task02/: demo.txt
Lec03_advanced/task01/: GPIO.c  task01.py
Lec03_advanced/task03/: task03.py
Lec03_advanced/task05/: task05.py
Lec03_advanced/task06/: headers.xlsx  task06.py
challenges/smart script/: Alaxa.py  test.py
(+56 files in other folders)
